--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd backend && node index.js",
+    "start": "node backend/index.js",
     "dev": "nodemon backend/index.js",
     "build": "cd frontend && npm install && npm run build"
   },
